--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,7 +13,7 @@
         <button>Home page</button>
     </a>
 
-    <h1>Yum-yum Lasagna Recipe</h1>
+    <h1>Yum-Yum Lasagna Recipe</h1>
     <img src="/images/lasagna.jpg" alt="Delicious Lasagna">
 
     <div class="Description">
