added pilaf and hamburger upd astyle for img

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,7 +14,7 @@
     </a>
 
     <h1>Yum-Yum Lasagna Recipe</h1>
-    <img src="/images/lasagna.jpg" alt="Delicious Lasagna">
+    <img src="/images/lasagna.jpg" class="food-photos" alt="Delicious Lasagna">
 
     <div class="Description">
         <p>
