--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
     <div class="recipes">
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Yum Lasagna Recipe</a>
-
+        <ul>
+          <li><a href="recipes/lasagna.html">Yum Lasagna Recipe</a></li>
+          <li><a href="recipes/pilaf.html">Uzbek pilaf</a></li>
+          <li><a href="recipes/hamburger.html">American Hamburger</a></li>  
+        </ul>
+        
     </div>
 
 </body>
